# peak_test

./: .gitignore  README.md  pyproject.toml
application/rest/: fastapi_main.py
requirements/: prod.txt
test/rest/: test_fastapi_main.py
