[tool.poetry]
name = "peak_test"
version = "0.1.0"
description = ""
authors = ["JichangJang <wlckd90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tox = "^3.23.1"
coverage = "^5.5"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
mypy = "^0.910"
black = "^21.6b0"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
